# ferro

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/ferro-admin/: Cargo.toml
crates/ferro-admin/src/: api.rs  app.rs  auth.rs  lib.rs  state.rs  util.rs
crates/ferro-admin/src/routes/: content_edit.rs  content_list.rs  dashboard.rs  layout.rs  login.rs  media.rs  mod.rs  plugins.rs  roles.rs  schema.rs  settings.rs  users.rs
crates/ferro-admin/style/: main.scss
crates/ferro-api/: Cargo.toml
crates/ferro-api/src/: auth.rs  csrf.rs  error.rs  graphql.rs  lib.rs  openapi.rs  preview.rs  rate_limit.rs  rest.rs  sse.rs  state.rs  ui.rs
crates/ferro-api/src/ui/: admin.html  landing.html
crates/ferro-api/tests/: admin.rs  auth_flows.rs  csrf.rs  graphql_mutations.rs  graphql_subscription.rs  hooks.rs  media.rs  preview.rs  rest_auth.rs  schema_and_openapi.rs  search_and_types.rs  sse.rs  totp.rs  ui.rs  versions.rs
crates/ferro-auth/: Cargo.toml
crates/ferro-auth/src/: error.rs  jwt.rs  lib.rs  password.rs  policy.rs  service.rs  session.rs  totp.rs
crates/ferro-cli/: Cargo.toml
crates/ferro-cli/src/: admin.rs  budgets.rs  build.rs  config.rs  export.rs  import.rs  init.rs  lib.rs  main.rs  migrate.rs  plugin.rs  serve.rs
crates/ferro-cli/tests/: admin_cli.rs  export_import.rs  perf_budgets.rs
crates/ferro-core/: Cargo.toml
crates/ferro-core/src/: content.rs  error.rs  field.rs  id.rs  lib.rs  locale.rs  media.rs  query.rs  role.rs  site.rs  user.rs  validation.rs
crates/ferro-editor/: Cargo.toml
crates/ferro-editor/src/: field.rs  lib.rs  markdown.rs  toolbar.rs
crates/ferro-editor/src/blocks/: editor.rs  mod.rs  model.rs  render.rs
crates/ferro-macros/: Cargo.toml
crates/ferro-macros/src/: lib.rs
crates/ferro-media/: Cargo.toml
crates/ferro-media/src/: config.rs  error.rs  image_pipeline.rs  lib.rs  store.rs
crates/ferro-media/src/backends/: gcs.rs  local.rs  mod.rs  s3.rs
crates/ferro-plugin/: Cargo.toml
crates/ferro-plugin/src/: capability.rs  error.rs  hook.rs  host.rs  lib.rs  manifest.rs  registry.rs  runtime.rs  wasm_hook.rs  webhook.rs
crates/ferro-plugin/tests/: wasm_dispatch.rs  webhook.rs
crates/ferro-plugin/wit/: ferro.wit
crates/ferro-storage/: Cargo.toml
crates/ferro-storage/mem:/: IDENTITY  LOG  LOG.old.1777074398880611  MANIFEST-000005  OPTIONS-000007
crates/ferro-storage/migrations/postgres/: 0001_initial.sql
crates/ferro-storage/src/: config.rs  error.rs  lib.rs  repo.rs  schema.rs
crates/ferro-storage/src/backends/: fs_json.rs  fs_markdown.rs  mod.rs  postgres.rs  surreal.rs  surreal.surql
crates/ferro-storage/tests/: fs_markdown_backend.rs  surreal_backend.rs  version_backends.rs
docs/: README.md  SUMMARY.md  admin-ui.md  api-versioning.md  architecture.md  auth.md  block-editor.md  book.toml  cli.md  configuration.md  deployment.md  edge.md  getting-started.md  graphql.md  live-preview.md  media.md  plugin-walkthrough.md  plugins-webhooks.md  rest-api.md  storage-backends.md  troubleshooting.md
docs/adr/: 0001-leptos.md  0002-wasmtime-plugins.md  0003-surrealdb-default.md  0004-graphql-and-rest.md  0005-defer-edge.md  0006-argon2id.md
examples/plugin-audit/: Cargo.toml  README.md
examples/plugin-audit/src/: lib.rs
examples/plugin-hello/: Cargo.toml  README.md
examples/plugin-hello/src/: lib.rs
examples/plugin-panic/: Cargo.toml  README.md
examples/plugin-panic/src/: lib.rs
examples/plugin-seo/: Cargo.toml  README.md  plugin.toml
examples/plugin-seo/src/: lib.rs
examples/plugin-webhook-demo/: README.md
examples/starter-blog/: Cargo.toml  README.md  ferro.toml  install-plugins.sh  validate-blocks.sh
examples/starter-blog/data/content/: 01HQYAJ000000000000000000Z.json  01HQYP1000000000000000000Z.json  01HQYP2000000000000000000Z.json  01HQYP3000000000000000000Z.json  01HQYP4000000000000000000Z.json  01HQYP5000000000000000000Z.json  01HQYP6000000000000000000Z.json  01HQYP7000000000000000000Z.json  01HQYP8000000000000000000Z.json  01HQYP9000000000000000000Z.json  01HQYPA000000000000000000Z.json
examples/starter-blog/data/roles/: role_01KQ1K9KR8JBGSQDV3RJA08C21.json
examples/starter-blog/data/sites/: 01HQYHA000000000000000000Z.json  site_01KQ3X7A32BAP6T4SF7Z4Z6YKF.json
examples/starter-blog/data/types/: 01HQYTA000000000000000000Z.json  01HQYTP000000000000000000Z.json  01HQYTQ000000000000000000Z.json  01HQYTR000000000000000000Z.json  01HQYTS000000000000000000Z.json
examples/starter-blog/data/users/: user_01KQ1K9KR850DY0BBNQVQ2R3CD.json
examples/starter-blog/plugins/audit/: plugin.toml  plugin.wasm
examples/starter-blog/plugins/hello/: plugin.toml  plugin.wasm
examples/starter-blog/plugins/panic/: plugin.toml  plugin.wasm
examples/starter-blog/plugins/seo/: plugin.wasm
examples/starter-blog/site-app/: Cargo.toml
examples/starter-blog/site-app/src/: data.rs  islands.rs  lib.rs  seo.rs  views.rs
examples/starter-blog/site-server/: Cargo.toml
examples/starter-blog/site-server/src/: data.rs  main.rs  render.rs  seo.rs  views.rs
examples/starter-blog/site-server/style/: site.css
examples/starter-blog/src/: lib.rs
