[workspace]
resolver = "2"
members = [
    "crates/ferro-core",
    "crates/ferro-macros",
    "crates/ferro-storage",
    "crates/ferro-auth",
    "crates/ferro-media",
    "crates/ferro-plugin",
    "crates/ferro-api",
    "crates/ferro-editor",
    "crates/ferro-admin",
    "crates/ferro-cli",
    "examples/starter-blog",
]

# cargo-leptos configuration. Two crates, one project: ferro-cli is the SSR
# binary (server) and ferro-admin compiles to a WASM library (browser).
[[workspace.metadata.leptos]]
name = "ferro-admin"
bin-package = "ferro-cli"
bin-target = "ferro"
bin-exe-name = "ferro"
lib-package = "ferro-admin"
output-name = "ferro_admin"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "crates/ferro-admin/style/main.scss"
assets-dir = "crates/ferro-admin/public"
site-addr = "127.0.0.1:3000"
reload-port = 3002
browserquery = "defaults"
bin-features = []
lib-features = ["hydrate"]
lib-profile-release = "release-wasm"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
authors = ["Chris Olson <chrisolson22@gmail.com>"]
repository = "https://github.com/chrisolson/ferro"
homepage = "https://github.com/chrisolson/ferro"
readme = "README.md"

[workspace.dependencies]
# --- async / runtime ---
tokio = { version = "1.40", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
futures = "0.3"

# --- errors ---
thiserror = "1"
anyhow = "1"

# --- serde / ids ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
ulid = { version = "1", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
bytes = "1"
url = { version = "2", features = ["serde"] }

# --- observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.25"

# --- http / axum / leptos ---
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "cookie-private"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-full", "fs", "set-header", "cors"] }
hyper = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

leptos = { version = "0.8", features = ["nightly"] }
leptos_axum = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }

# --- graphql ---
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"

# --- openapi ---
utoipa = { version = "5", features = ["axum_extras", "uuid", "time"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# --- storage ---
surrealdb = { version = "2", default-features = false, features = ["kv-rocksdb", "kv-mem", "protocol-ws", "protocol-http"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }

# --- auth ---
argon2 = { version = "0.5", features = ["std", "password-hash"] }
password-hash = { version = "0.5", features = ["rand_core", "std"] }
rand = "0.8"
jsonwebtoken = "9"
zeroize = { version = "1", features = ["derive"] }

# --- plugin host (wasmtime) ---
wasmtime = { version = "26", features = ["component-model", "async", "cranelift"] }
wasmtime-wasi = "26"
wit-bindgen = "0.35"

# --- media / cloud ---
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"] }
aws-sdk-s3 = { version = "1" }
aws-config = { version = "1" }
google-cloud-storage = { version = "0.22" }

# --- cli ---
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"

# --- utility ---
regex = "1"
once_cell = "1"
itertools = "0.13"
humansize = "2"
mime = "0.3"
mime_guess = "2"

# --- proc-macro ---
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20"

# --- compression ---
brotli = "7"
flate2 = "1"
hex = "0.4"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
base32 = "0.5"

# --- encoding ---
base64 = "0.22"

# --- testing ---
insta = { version = "1", features = ["yaml", "json"] }
tokio-test = "0.4"
proptest = "1"

# --- internal crates ---
ferro-core = { path = "crates/ferro-core", version = "0.1.0" }
ferro-macros = { path = "crates/ferro-macros", version = "0.1.0" }
ferro-storage = { path = "crates/ferro-storage", version = "0.1.0" }
ferro-auth = { path = "crates/ferro-auth", version = "0.1.0" }
ferro-media = { path = "crates/ferro-media", version = "0.1.0" }
ferro-plugin = { path = "crates/ferro-plugin", version = "0.1.0" }
ferro-api = { path = "crates/ferro-api", version = "0.1.0" }
ferro-editor = { path = "crates/ferro-editor", version = "0.1.0" }
ferro-admin = { path = "crates/ferro-admin", version = "0.1.0" }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = "symbols"
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = "z"
lto = "fat"

[profile.dev]
opt-level = 0
debug = 1
