[package]
name = "ferro-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ferro admin UI: Leptos SSR + islands + lazy_route + split."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:gloo-net",
    "dep:js-sys",
    "dep:web-sys",
    "dep:console_error_panic_hook",
]
ssr = [
    "leptos/ssr",
    "leptos_axum/default",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:axum",
    "dep:tokio",
]

[dependencies]
ferro-core.workspace = true
ferro-editor.workspace = true

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
gloo-net = { version = "0.6", optional = true, default-features = false, features = ["http", "json"] }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Document",
    "Element",
    "FormData",
    "File",
    "FileList",
    "HtmlInputElement",
    "Storage",
    "Window",
] }
console_error_panic_hook = { version = "0.1", optional = true }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# wasm32: opt getrandom 0.3 into the wasm_js backend so any transitively
# pulled-in entropy callers (rand, server_fn, etc.) build for the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["v4", "v7", "serde", "js"] }

# SSR-only dependencies are gated via the `ssr` feature.
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing.workspace = true

# Leptos build config for this crate is declared at the workspace root in
# `[[workspace.metadata.leptos]]` since cargo-leptos drives both the
# `ferro-cli` SSR binary and the `ferro-admin` WASM lib in one project.
