[package]
name = "ferro-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ferro authentication: argon2 passwords, sessions, JWT, RBAC."

[dependencies]
ferro-core.workspace = true
ferro-storage.workspace = true

async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tracing.workspace = true
tokio.workspace = true

argon2.workspace = true
password-hash.workspace = true
rand.workspace = true
jsonwebtoken.workspace = true
zeroize.workspace = true
uuid.workspace = true
