[package]
name = "ferro-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ferro core domain model: sites, content types, fields, users, roles."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
ulid.workspace = true
url.workspace = true
regex.workspace = true
tracing.workspace = true
async-trait.workspace = true
