[package]
name = "ferro-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ferro media store: local FS, S3, GCS backends + image pipeline."

[features]
default = ["local"]
local = []
s3 = ["dep:aws-sdk-s3", "dep:aws-config"]
gcs = ["dep:google-cloud-storage"]
images = ["dep:image"]

[dependencies]
ferro-core.workspace = true

async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
tracing.workspace = true
bytes.workspace = true
futures.workspace = true
url.workspace = true
mime.workspace = true
mime_guess.workspace = true
uuid.workspace = true

image = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }
google-cloud-storage = { workspace = true, optional = true }
