[package]
name = "ferro-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ferro WASM plugin host built on wasmtime + the component model."

[dependencies]
ferro-core.workspace = true

async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
bytes.workspace = true
futures.workspace = true

wasmtime.workspace = true
wasmtime-wasi.workspace = true
