[package]
name = "plugin-audit"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Ferro plugin: writes a JSONL audit trail of every content event."

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.35"

# Standalone — not a workspace member. Build with:
#   cargo build --manifest-path examples/plugin-audit/Cargo.toml --release --target wasm32-wasip2
[workspace]
