[package]
name = "plugin-seo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Ferro plugin: emits Open Graph + JSON-LD sidecar files on content.published."

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.35"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Standalone — not a workspace member. Build with:
#   cargo build --manifest-path examples/plugin-seo/Cargo.toml --release --target wasm32-wasip2
[workspace]
