[package]
name = "starter-site-app"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Leptos islands app for the starter-blog public site."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:console_error_panic_hook",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos_axum/default",
    "dep:axum",
    "dep:tokio",
    "dep:reqwest",
]

[dependencies]
ferro-editor.workspace = true

# `islands` is unconditional: the `#[island]` macro emits prop-serialization
# code that references `leptos::serde`, only available with the islands feature.
leptos = { workspace = true, features = ["nightly", "islands"] }
leptos_meta.workspace = true
leptos_router = { workspace = true, features = ["nightly"] }
leptos_axum = { workspace = true, optional = true }

serde.workspace = true
serde_json.workspace = true

axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }

wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Document",
    "Element",
    "HtmlElement",
    "NodeList",
    "Storage",
    "Window",
    "CssStyleDeclaration",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["v4", "v7", "serde", "js"] }
