[package]
name = "starter-site-server"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Public-facing starter-site SSR server (Leptos islands)."

[[bin]]
name = "starter-site"
path = "src/main.rs"

[features]
default = ["ssr"]
ssr = ["starter-site-app/ssr"]

[dependencies]
starter-site-app = { path = "../site-app" }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

leptos = { workspace = true, features = ["ssr"] }
leptos_meta = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }
